Vue Transitions y Animaciones de CSS

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,11 @@
 //Una manera más limpia de hacer imports de node_modules
-@import '~bulma/bulma.sass'
+@import '~bulma/bulma.sass';
+
+.move-enter-active, .move-leave-active {
+  transform: translateX(0);
+  transition: all 0.3s linear;
+}
+
+.move-enter, .move-leave-to {
+  transform: translateX(100%);
+}
